<resources>
    <string name="app_name">Memory Vault</string>
    <string name="delete_note">Delete Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="sample_note">Sample Note</string>
    <string name="date">Date</string>
    <string name="detail_catatan">Detail Catatan</string>
    <string name="kembali">Kembali</string>
    <string name="edit_catatan">Edit Catatan</string>
    <string name="pilih_gambar_opsional">Pilih gambar (Opsional)</string>
    <string name="tambah_catatan">Tambah Catatan</string>
    <string name="tulis_catatan_anda">Tulis catatan anda...</string>
    <string name="gunakan_suara">Gunakan suara</string>
    <string name="lihat_semua_catatan">Lihat semua catatan</string>
    <string name="kirim">Kirim</string>
    <string name="lihat_lebih_detail">Lihat lebih detail</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tombol_cari">Cari</string>
    <string name="cari_catatan">Cari catatan...</string>
    <string name="semua_catatan">Semua Catatan</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="keluar">Keluar</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun_registrasi">Belum punya akun? Registrasi</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="akun">Akun</string>
    <string name="registrasi">Registrasi</string>
    <string name="masukkan_kata_sandi_anda">Masukkan kata sandi anda...</string>
    <string name="masukkan_email_anda">Masukkan email anda...</string>
    <string name="masukkan_nama_pengguna">Masukkan nama pengguna...</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="penulis">Penulis</string>
    <string name="lihat_catatan_saya">Lihat catatan saya</string>
    <string name="memuat_pengguna">Memuat Pengguna</string>
    <string name="tulis_nama_anda">Tulis nama anda</string>
    <string name="pengaturan_akun">Pengaturan akun</string>
    <string name="catatan_saya">Catatan Saya</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="selanjutnya">Selanjutnya</string>
</resources>