<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrasi"
            android:theme="@style/Theme.Recorder"
            android:textSize="29sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_register"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pengguna"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama_pengguna"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_email_anda"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kata_sandi"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_kata_sandi_anda"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue_purple"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrasi"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue_purple"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun_masuk"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
