<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_blue_purple"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewNote"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="Note Image"
            android:background="@drawable/image_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_note"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penulis"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp" />

            <!-- Teks "See Details" yang bisa ditekan -->
            <TextView
                android:id="@+id/detailTextNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_lebih_detail"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="35dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="start" />

        </LinearLayout>

                <ImageButton
                android:id="@+id/imageButtonEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/edit_note" />

                <ImageButton
                    android:id="@+id/imageButtonDelete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_delete"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/delete_note"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>