<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ScrollView untuk membuat konten bisa di-scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LinearLayout utama untuk konten halaman login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:theme="@style/Theme.Recorder"
                android:textSize="29sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_login"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="3dp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_email_anda"
                android:textSize="15sp"
                android:padding="20dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kata_sandi"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingBottom="5dp"
                android:layout_marginLeft="3dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_kata_sandi_anda"
                android:padding="20dp"
                android:background="@drawable/edit_text_background"
                android:textSize="15sp"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/gradient_blue_purple"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/gradient_blue_purple"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun_registrasi"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- ProgressBar di tengah layar -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>
</FrameLayout>
