<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ScrollView untuk memungkinkan halaman bisa di-scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Teks Edit Notes -->
            <TextView
                android:id="@+id/textViewEditNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_catatan"
                android:theme="@style/Theme.Recorder"
                android:textSize="29sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp" />

            <ImageView
                android:id="@+id/imageViewNote"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_corners" />

            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penulis"
                android:theme="@style/Theme.Recorder"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="13dp" />

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tulis catatan baru anda..."
                android:textColor="@color/TextColor"
                android:padding="16dp"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_blue_purple">

                <Button
                    android:id="@+id/buttonRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gunakan_suara"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_blue_purple"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/buttonChooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_gambar_opsional"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient_blue_purple"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/simpan"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_blue_purple"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batal"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- ProgressBar yang berada di tengah halaman dengan CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

</FrameLayout>

